--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,4 +1,3 @@
- <div class="alert alert-primary">
-  <span>{{ title }}</span>
-  <h1><app-Value></app-Value></h1>
-</div>
+<app-nav></app-nav>
+<app-home></app-home>
+
