--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container" >
-    <a class="navbar-brand" href="#">Dating App</a>
+    <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
 
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active" *ngIf="loggedIn()">
-        <a class="nav-link" href="#">Matches</a>
+      <li class="nav-item" routerLinkActive="active" *ngIf="loggedIn()">
+        <a class="nav-link" [routerLink]="['/members']">Matches</a>
       </li>
-      <li class="nav-item" *ngIf="loggedIn()">
-        <a class="nav-link" href="#">Lists</a>
+      <li class="nav-item" routerLinkActive="active" *ngIf="loggedIn()">
+        <a class="nav-link" [routerLink]="['/lists']">Lists</a>
       </li>
-      <li class="nav-item" *ngIf="loggedIn()">
-        <a class="nav-link" href="#">Messages</a>
+      <li class="nav-item" routerLinkActive="active" *ngIf="loggedIn()">
+        <a class="nav-link" [routerLink]="['/messages']">Messages</a>
       </li>
     </ul>
 
